[package]
name = "perlin_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = "0.8.2"
rand = "0.8.5"
rayon = "1.8.0"
sdl2 = { version = "0.36.0", features = ["unsafe_textures"] }

[profile.release]
opt-level = 3